Agregando carpetas, para guardar las notebooks previas al desarrollo del proyecto y las notebooks o archivos del proyecto de scraping

--- a/clase5-6.ipynb
+++ b/clase5-6.ipynb
@@ -2,63 +2,73 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": "# HTTP\n## Hypertext Transfer Protocol\nEs un protocolo de transferencia de hypertexto, por medio del cual se comunican dos computadoras.\nCliente y servidor: \n* Cliente realiza una petición al servidor para que le mande el navegador.",
+   "source": "# Clase 5\n## HTML\nHypertext Markup Language\n",
    "metadata": {
-    "cell_id": "e305ecd635b04d559dd3195f5bb5bf8c",
+    "cell_id": "10202f5bea014e1b93ded72cdd0d983a",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 249.171875
+    "deepnote_cell_height": 176.390625
    }
   },
   {
    "cell_type": "markdown",
-   "source": "# PETICIÓN\n\n",
+   "source": "Es un lenguaje que define la estructura de una web page.\n* < script > hace referencia a un código ejecutable\n* < meta > aporta información extra al documento (metadatos)\n* < iframe > colocar paginas externas dentro de la página actual",
    "metadata": {
-    "cell_id": "cf0616961fc745c3965e250dc3cb9fa8",
+    "cell_id": "242891f1d4f0493ba9432f28c026eb9a",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 82
+    "deepnote_cell_height": 153.5625
    }
   },
   {
    "cell_type": "markdown",
-   "source": "![Picture title](image-20220503-161156.png)",
+   "source": "# Clase 6 \n## Robots.txt: permisos y consideraciones al hacer web scraping\n",
    "metadata": {
-    "cell_id": "a3b64f4b7c064e8d9beb147c82086f6f",
+    "cell_id": "99f84190f5144b5cbc9a3a8b3e3e7f6c",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 345.0625
+    "deepnote_cell_height": 178
    }
   },
   {
    "cell_type": "markdown",
-   "source": "# Estrucura de la requests:\n## Request (Petición)\n1. Método y Versión del protocolo:\n* GET (Traer) / Versión de protocolo: HTTP/1.1\n2. Host: developer.mozilla.org ( o el del sitio que utilizas)\n3. Accept-Language:fr (Francés)\n\n## Response (Respuesta)\n1. Versión de protocolo del servidor y status quot: HTTP/1.1   200 OK\n#### Algunos tipos de respuestas:\n* Códigos de estado HTTP más comunes\n* Status code 200 – OK.\n* Status code 301 – Moved Permanently.\n* Status code 302 – Moved Temporarily.\n* Status code 403 – Forbidden\n* Status code 404 – Not Found\n* Status code 500 – Internal Server Error\n* Status code 503 ­– Service Unavailable\n\n2. Date (Fecha en la cual se genero la respuesta): Sat, 09 Oct 2010 14:28:02 GMT\n3. Server (Donde se actulizo la respuesta): Apache\n4. Last-Modified(Ultima fecha de modificación de la respuesta):Tue, 01 Dec 2009 20:18:22 GMT\n5. ETag(Relacionado con el Caché): \"51142bc1-7449-479b075b2891b\"\n6. Accept-Range(En que se aceptan): bytes\n7. Content-Length(Tamañno de ar): 29769\n8. Content-Type(Tipo de contenido del texto que se repondio): text/html\n\n",
+   "source": "* Robots.txt:\n    * Archivo para evitar el web scraping estendido y perjudicante.\n    * Platzi: \n        * Path o ruta + robots.txt = https://platzi.com/robots.txt\n",
    "metadata": {
-    "cell_id": "7d1fc474ef81424a8e71deb32cadea57",
+    "cell_id": "1124d31d4760459086670b37269997f7",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 876.59375
+    "deepnote_cell_height": 145.5625
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "### Archivo:\n* Define reglas para poder o no extraer datos.\n* Define permisos a los cuales limitantes para ciertos visitantes, cuestion de buenas practicas, es importante considerarlo para hacer un web scraper ético",
+   "metadata": {
+    "cell_id": "5885ccfa309044f8b011f778d5133c1b",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 162.171875
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "User-Agent: *\nAllow: /conf/*\nAllow: /conf-og/*\nDisallow: /*/*/concepto/*/*/material/\nDisallow: /login/facebook/\nDisallow: /login/twitter/\nDisallow: /*/*/live/\nDisallow: /*/*/%7B%7Burl%20absolute=/\nDisallow: /*/*/add_contribution/\nDisallow: /mi-suscripcion/\nDisallow: /r/\nDisallow: /clases/*/nuevos_materiales/\nDisallow: /kit-ui/\nDisallow: /ui/\nDisallow: /sfotipy/\nDisallow: /streaming/*\nDisallow: /payments/*\nDisallow: /*/add_review/\nDisallow: /*/save/\nDisallow: /adquirir/*\nDisallow: /comentario/\nDisallow: /comment/\nDisallow: /comprar/\nDisallow: /precios/*/\nDisallow: /yearly-stats-share/\nDisallow: /courses/\nDisallow: /historias/\nDisallow: /becas-fb/\nDisallow: /testimonios/\n\nSitemap: https://platzi.com/sitemap.xml",
+   "metadata": {
+    "cell_id": "e483f5a10fc0441bac34af3b5afe2c17",
+    "tags": [],
+    "is_collapsed": false,
+    "owner_user_id": "46fc49a6-85dd-4f3e-a856-828c508d5f95",
+    "deepnote_cell_type": "text-cell-p"
    }
   },
   {
    "cell_type": "markdown",
    "source": "",
    "metadata": {
-    "cell_id": "0c43e3a8eec041eca74f90bdb6f9845f",
+    "cell_id": "9528ed479d6946599ddaacf7c2ac32c8",
     "tags": [],
-    "owner_user_id": "46fc49a6-85dd-4f3e-a856-828c508d5f95",
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 46
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": "![Picture title](image-20220503-162556.png)",
-   "metadata": {
-    "cell_id": "8ff22e7100644828a88f14c5c84f60d2",
-    "tags": [],
-    "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 70
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-p"
    }
   },
   {
@@ -76,7 +86,7 @@
  "metadata": {
   "orig_nbformat": 2,
   "deepnote": {},
-  "deepnote_notebook_id": "1bc3e7e4-d282-4741-b1da-93874784779d",
+  "deepnote_notebook_id": "1c683c48-2260-4eeb-93e5-acba38924fc3",
   "deepnote_execution_queue": []
  }
 }
