Agregando los cambios de la clse nuemro 20

--- a/La Republica Scraper/la_republica_scraper1.ipynb
+++ b/La Republica Scraper/la_republica_scraper1.ipynb
@@ -2,29 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "source": "# Librerias:\nimport requests as req\nimport lxml.html as html",
    "metadata": {
     "cell_id": "63f18c97afa34c21b77139d27c025a2a",
     "tags": [],
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "5f63a16c",
-    "execution_start": 1651862751637,
-    "execution_millis": 20,
-    "owner_user_id": "46fc49a6-85dd-4f3e-a856-828c508d5f95",
+    "source_hash": "7cbe2193",
+    "execution_start": 1652119390166,
+    "execution_millis": 31,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 117
+    "deepnote_cell_height": 189
    },
-   "outputs": [],
-   "execution_count": 3
+   "source": "# Librerias:\nimport requests as req\nimport lxml.html as html\n# Para la casi ultima clase\nimport os\nimport datetime\n",
+   "execution_count": 1,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "XPATH_LINK_TO_ARTICLE = $x('//h2[@class = \"headline\"]/a/@href').map(x => x.value)\nXPATH_TITLE = $x('//div[@class = \"wrap-info\"]/h1/text()').map(x => x.wholeText)\nXPATH_SUMMARY = $x('//div[@class = \"lead\"]/p/text()').map(x => x.wholeText)\nXPATH_BODY = $x('//div[@class = \"news empresasSect\"]//div[@class = \"html-content\"]//text()').map(x => x.wholeText)\n",
    "metadata": {
     "cell_id": "2e2dd8b6272942d38d14604606f38ebe",
     "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "cc9bf592",
+    "execution_start": 1652119390198,
+    "execution_millis": 0,
+    "owner_user_id": "46fc49a6-85dd-4f3e-a856-828c508d5f95",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 138
+    "deepnote_cell_height": 171
+   },
+   "source": "HOME_URL = 'https://www.larepublica.co/'\n# Cambiar este codigo a otro que me genere todas las urls:\nXPATH_LINK_TO_ARTICLE = '//div[@class = \"flex-grow-1 mr-5\"]//div[@class = \"news V_Title_Img\"]/a/@href'\nXPATH_TITLE = '//div[@class = \"wrap-info\"]/h1/text()'\nXPATH_SUMMARY = '//div[@class = \"lead\"]/p/text()'\nXPATH_BODY = '//div[@class = \"news empresasSect\"]//div[@class = \"html-content\"]//text()'",
+   "execution_count": 2,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "cell_id": "20394155b0ea4220b85713bc606ecd31",
+    "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "211276e5",
+    "execution_start": 1652119390198,
+    "execution_millis": 1,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 1107
+   },
+   "source": "def parsed_notice(link, today):\n    try:\n        response = req.get(link)\n        if response.status_code == 200:\n            #Traer el doc html:\n            notice = response.content.decode('utf-8')\n            parsed = html.fromstring(notice)\n\n            try:\n                # Devuelde la lista pero solo queremos el titulo\n                title = parsed.xpath(XPATH_TITLE)[0]\n                title = title.replace('\\\"','')\n                summary = parsed.xpath(XPATH_SUMMARY)[0]\n                body = parsed.xpath(XPATH_BODY)\n            except IndexError:\n                return\n            #Guardar en archivo:\n            # Ver función de f \"\"\n            with open(f'{today}/{title}.txt', 'w', encoding='utf-8') as f:\n                f.write(title)\n                f.write('\\n\\n')\n                f.write(summary)\n                f.write('\\n\\n')\n                for p in body:\n                    f.write(p)\n                    f.write('\\n')\n        else:\n            raise ValueError(f'Error: {response.status_code}')\n    except ValueError as ve:\n        print(ve) \n\n\ndef pars_home():\n    try:\n        response = req.get(HOME_URL)\n        if response.status_code == 200:\n            # El metodo content trae todo el documento html\n            # El metodos decode permite no tener errores con caracteres especiales\n            home = response.content.decode('utf-8')\n            # Tranforma el contenido htlm para poder hacer spam\n            parsed = html.fromstring(home)\n            # El metodo parsed\n            links_notice = parsed.xpath(XPATH_LINK_TO_ARTICLE)\n            #print(links_notice)\n\n            #Variable para crear la carpeta de almacenamiento:\n            today = datetime.date.today(),str('%d-%m-%Y')\n            # Si no existe la carpeta una carpeta con la fecha\n            # de hoy crearla:\n            if not os.path.isdir(today):\n                os.mkdir(today)\n\n            for link in links_notice:\n                parsed_notice(link, today)\n        else:\n            raise ValueError(f'Error: {response.status_code}')\n    except ValueError as ve:\n        print(ve)",
+   "execution_count": 3,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "cell_id": "150b8e10006344ea82f8cea3fc5ad911",
+    "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "a1363559",
+    "execution_start": 1652119390201,
+    "execution_millis": 2,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 99
+   },
+   "source": "def run():\n    pars_home()",
+   "execution_count": 4,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "cell_id": "d762dd73b92b47cb90d0a5364977a73d",
+    "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "f270bd60",
+    "execution_start": 1652119390204,
+    "execution_millis": 206,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 162.1875
+   },
+   "source": "if __name__ == '__main__':\n    run()",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "stat: path should be string, bytes, os.PathLike or integer, not tuple",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-41f627089c73>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-292a518e5142>\u001b[0m in \u001b[0;36mrun\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mpars_home\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-3aa97c5eef59>\u001b[0m in \u001b[0;36mpars_home\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0;31m# Si no existe la carpeta una carpeta con la fecha\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0;31m# de hoy crearla:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/genericpath.py\u001b[0m in \u001b[0;36misdir\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0;34m\"\"\"Return true if the pathname refers to an existing directory.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0mst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: stat: path should be string, bytes, os.PathLike or integer, not tuple"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": "",
+   "metadata": {
+    "cell_id": "ecea7af57e1043458a0c66bfd995ce36",
+    "tags": [],
+    "deepnote_to_be_reexecuted": true,
+    "source_hash": "b623e53d",
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 66
    },
    "outputs": [],
    "execution_count": null
